--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,102 @@
-.App {
-  text-align: center;
+body {
+  margin: 0px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main {
+  font-family: sans-serif;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   align-items: center;
+  height: 100vh;
+  width: 100vw;
+  overflow-y: hidden;
+  overflow-x: hidden;
+  background: rgb(117, 117, 117);
+}
+
+.header{
+width: 100%;
+display:  flex;
+flex-direction: row;
+justify-content: space-between;
+align-items: center;
+}
+
+.head {
+  justify-self: flex-start;
+  align-self: flex-start;
+  height: 100px;
+  border-radius: 100%;
+  margin-bottom: 30px;
+}
+
+.main .footer{
+  margin-top:80px;
+  border-top : 0.5px solid #ef7b98;
+  padding-top: 5px;
+  width: 100%;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  color: #ffff;
+}
+
+.topnav {
+  overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.topnav button {
+  float: left;
+  display: block;
+  background-color: transparent;
+  color: #f2f2f2;
+  text-align: center;
+  margin-right: 10px;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  cursor: pointer;
+  border-radius: 20px;
+  border: none;
+  outline: none;
+}
+
+/* Change the color of links on hover */
+.topnav button:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add an active class to highlight the current page */
+.topnav button .active {
+  background-color: #ef7b98;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+
+/*  Dialog  */
+
+
+.dialog {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.dialog-content {
+  background-color: white;
+  padding: 20px;
 }
+
+.dialog-close-button {
+  margin-top: 10px;
+}
+
